# Nexus-Multi-Agent-Ai-Research

./: .env.example  .gitignore  README.md  frontend.py  pyproject.toml
alembic/: env.py
alembic/versions/: e205682b1388_initial_phase_4_api_models.py
docs/phase1_foundation/: AGENTS.md  ARCHITECTURE.md  IMPLEMENTATION_ROADMAP.md  PROJECT_VISION.md  STATE.md
docs/phase2_core_engineering/: API.md  DATABASE.md  MEMORY.md  OBSERVABILITY.md  SECURITY.md  TOOLS.md  WORKFLOWS.md
docs/phase3_development_standards/: CODING_STANDARDS.md  CONTRIBUTING.md  PROMPT_STANDARDS.md  TESTING.md  UI_GUIDELINES.md
docs/phase3_development_standards/ADRs/: 0001-clean-architecture-phase1.md  README.md
docs/phase4_agent_mastery_curriculum/: AGENT_ENGINEERING.md  CONTEXT_ENGINEERING.md  EVALUATION.md  FAILURE_PATTERNS.md  LEARNING_GUIDE.md  MEMORY_SYSTEMS.md  ORCHESTRATION.md  RAG_GUIDE.md  SCALING_GUIDE.md  TOOL_CALLING.md
nexus/: __init__.py  config.py
nexus/agents/: __init__.py  analyst.py  base.py  fact_checker.py  planner.py  researcher.py  reviewer.py  writer.py
nexus/api/: hitl.py  routes.py  server.py
nexus/core/: __init__.py  exceptions.py  graph.py  state.py
nexus/db/: models.py  session.py
nexus/evaluation/: llm_judge.py
nexus/llm/: __init__.py  provider.py
nexus/memory/: vector.py
nexus/observability/: __init__.py  logger.py
nexus/prompts/: system_prompts.py
nexus/tools/: extract.py  search.py
tests/evaluation/: test_judge.py
tests/unit/: test_agents.py  test_graph.py  test_state.py  test_tools.py  test_vector_memory.py
