[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus"
version = "0.1.0"
description = "Nexus Research Intelligence Platform — Educational Multi-Agent AI Research System"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Nexus Engineering Team" }
]
keywords = ["multi-agent", "ai", "llm", "research", "orchestration"]

dependencies = [
    # Core framework
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Observability
    "structlog>=24.1.0",

    # UI (Phase 1 — temporary visual layer)
    "streamlit>=1.35.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",           # Beautiful terminal output for dev experience
    "typer>=0.12.0",          # CLI entrypoints

    # Testing
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
]

[project.optional-dependencies]
# Phase 2 deps — LLM integration (not needed for Phase 1)
llm = [
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "langchain-core>=0.2.0",
    "langgraph>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-ollama>=0.1.0",
]

# Phase 3 deps — Tools + Vector DB (not needed for Phase 1)
tools = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "duckduckgo-search>=6.1.0",
    "playwright>=1.44.0",
    "unstructured>=0.14.0",
    "pymupdf>=1.24.0",
]

# Phase 4 deps — API + DB (not needed for Phase 1)
api = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.30",
    "aiosqlite>=0.20.0",
    "redis>=5.0.0",
    "alembic>=1.13.0",
]

dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nexus*"]

# ============================================================
# RUFF — Linter & Formatter (replaces black + flake8 + isort)
# Per CODING_STANDARDS.md: Python 3.11+, strict enforcement
# ============================================================
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["nexus", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "D",    # pydocstyle
    "ANN",  # flake8-annotations (type hint enforcement)
    "S",    # flake8-bandit (security)
    "RUF",  # Ruff-specific rules
]
ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105", # Missing docstrings in some contexts
    "ANN101", "ANN102",  # self/cls annotation not required
    "S101",  # assert allowed in tests
]

[tool.ruff.lint.pydocstyle]
convention = "google"  # Per CODING_STANDARDS.md: Google-style docstrings

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ============================================================
# MYPY — Strict Type Checking
# Per CODING_STANDARDS.md: mypy strict mode
# ============================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["streamlit.*", "structlog.*"]
ignore_missing_imports = true

# ============================================================
# PYTEST — Test Configuration
# Per TESTING.md: unit + integration + evaluation tiers
# ============================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--cov=nexus",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]
markers = [
    "unit: Pure unit tests with no external dependencies",
    "integration: Integration tests requiring local LLM or real tools",
    "evaluation: LLM-as-judge evaluation tests (slow, requires API keys)",
]

[tool.coverage.run]
source = ["nexus"]
omit = ["tests/*", "frontend.py"]
